--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -25,6 +25,7 @@
     "json-schema-to-yup": "^1.8.8",
     "lodash": "^4.17.11",
     "net-provider": "^1.3.0",
+    "react-json-pretty": "^2.1.0",
     "react-redux": "^7.0.3",
     "redux-admin": "^1.5.1",
     "validate.js": "^0.12.0",
