--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -24,7 +24,7 @@
     "formik": "^1.5.7",
     "json-schema-to-yup": "^1.8.8",
     "lodash": "^4.17.11",
-    "net-provider": "^1.3.0",
+    "net-provider": "^1.3.1",
     "react-json-pretty": "^2.1.0",
     "react-redux": "^7.0.3",
     "redux-admin": "^1.5.1",
@@ -32,12 +32,12 @@
     "yup": "^0.27.0"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.8.6"
   },
   "devDependencies": {
     "nwb": "0.23.x",
-    "react": "^16.8.4",
-    "react-dom": "^16.6.3"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "repository": {
     "type": "git",
