--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,15 +29,12 @@
     "react-redux": "^7.0.3",
     "redux-admin": "^1.5.1",
     "validate.js": "^0.12.0",
-    "yup": "^0.27.0"
-  },
-  "peerDependencies": {
-    "react": "16.8.6"
-  },
-  "devDependencies": {
-    "nwb": "0.23.x",
+    "yup": "^0.27.0",
     "react": "16.8.6",
     "react-dom": "16.8.6"
+  },
+  "devDependencies": {
+    "nwb": "0.23.x"
   },
   "repository": {
     "type": "git",
