--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -21,15 +21,15 @@
   },
   "dependencies": {
     "antd": "^3.19.5",
-    "formik": "^1.5.7",
-    "json-schema-to-yup": "^1.8.8",
-    "lodash": "^4.17.11",
-    "net-provider": "^1.3.5",
-    "react-json-pretty": "^2.1.0",
-    "react-redux": "^7.1.0",
-    "redux-admin": "^1.5.4",
-    "validate.js": "^0.13.1",
-    "yup": "^0.27.0",
+    "formik": "1.5.7",
+    "json-schema-to-yup": "1.8.8",
+    "lodash": "4.17.11",
+    "net-provider": "1.3.6",
+    "react-json-pretty": "2.1.0",
+    "react-redux": "7.1.0",
+    "redux-admin": "1.5.5",
+    "validate.js": "0.13.1",
+    "yup": "0.27.0",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
