--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.12",
+  "version": "1.1.13",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -19,21 +19,19 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {
+  "devDependencies": {
     "antd": "^3.19.5",
     "formik": "1.5.7",
     "json-schema-to-yup": "1.8.8",
     "lodash": "4.17.11",
-    "net-provider": "1.3.6",
+    "redux-admin": "1.5.6",
+    "net-provider": "1.3.7",
     "react-json-pretty": "2.1.0",
     "react-redux": "7.1.0",
-    "redux-admin": "1.5.5",
     "validate.js": "0.13.1",
     "yup": "0.27.0",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
-  },
-  "devDependencies": {
+    "react-dom": "16.8.6",
     "nwb": "0.23.x"
   },
   "repository": {
