--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -19,20 +19,22 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
+  "dependencies": {
+    "json-schema-to-yup": "1.8.8",
+    "react-json-pretty": "2.1.0",
+    "lodash": "4.17.11",
+    "formik": "1.5.7",
+    "validate.js": "0.13.1",
+    "yup": "0.27.0"
+  },
   "devDependencies": {
     "antd": "^3.19.5",
-    "formik": "1.5.7",
-    "json-schema-to-yup": "1.8.8",
-    "lodash": "4.17.11",
-    "redux-admin": "1.5.6",
-    "net-provider": "1.3.7",
-    "react-json-pretty": "2.1.0",
-    "react-redux": "7.1.0",
-    "validate.js": "0.13.1",
-    "yup": "0.27.0",
+    "net-provider": "^1.3.8",
+    "nwb": "0.23.x",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "nwb": "0.23.x"
+    "react-redux": "7.1.0",
+    "redux-admin": "^1.5.8"
   },
   "repository": {
     "type": "git",
