--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "json-schema-to-yup": "1.8.8",
     "react-json-pretty": "2.1.0",
     "lodash": "4.17.11",
-    "formik": "1.5.7",
     "validate.js": "0.13.1",
     "yup": "0.27.0"
   },
   "devDependencies": {
     "antd": "^3.19.5",
+    "formik": "1.5.7",
     "net-provider": "^1.3.8",
     "nwb": "0.23.x",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
-    "redux-admin": "^1.5.8"
+    "redux": "4.0.1",
+    "redux-admin": "^1.5.8",
+    "redux-saga": "^1.0.3"
   },
   "repository": {
     "type": "git",
