--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "umd"
   ],
   "scripts": {
+    "build:watch": "nodemon -w src -x 'rm .babelrc &> /dev/null; nwb build-react-component --no-demo --copy-files'",
     "build": "nwb build-react-component --copy-files",
     "clean": "nwb clean-module && nwb clean-demo",
     "prepublishOnly": "npm run build",
@@ -21,8 +22,8 @@
   },
   "dependencies": {
     "json-schema-to-yup": "1.8.8",
-    "react-json-pretty": "2.1.0",
     "lodash": "4.17.11",
+    "react-json-pretty": "2.1.0",
     "validate.js": "0.13.1",
     "yup": "0.27.0"
   },
@@ -30,6 +31,7 @@
     "antd": "^3.19.5",
     "formik": "1.5.7",
     "net-provider": "^1.3.8",
+    "nodemon": "^1.19.2",
     "nwb": "0.23.x",
     "react": "16.8.6",
     "react-dom": "16.8.6",
