--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-mongoose-casl-dashboard",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "admin screen with full CRUD functionality inside your react apps to your feathers-mongoose-casl",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -26,6 +26,7 @@
     "lodash": "4.17.15",
     "nunjucks": "^3.2.0",
     "react-json-pretty": "2.1.0",
+    "sift": "^9.0.4",
     "validate.js": "0.13.1",
     "yup": "0.27.0"
   },
@@ -41,7 +42,7 @@
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "redux": "4.0.1",
-    "redux-admin": "^1.7.0",
+    "redux-admin": "^1.7.2",
     "redux-saga": "^1.0.3",
     "uglifycss": "0.0.29"
   },
